=== HEAD

* Deprecate Dataset#table_ref_append (jeremyevans)

* Deprecate SQL::Expression#to_s taking an argument and returning a literal SQL string (jeremyevans)

* Deprecate creating Model class methods automatically from plugin public dataset methods (jeremyevans)

* Add Sequel.cache_anonymous_models accessor (jeremyevans)

* Deprecate Sequel::Model.cache_anonymous_models accessor (jeremyevans)

* Deprecate identity_map plugin (jeremyevans)

* Deprecate Model#set_values (jeremyevans)

* Deprecate pg_auto_parameterize and pg_statement_cache extensions (jeremyevans)

* Deprecate Model#pk_or_nil (jeremyevans)

* Deprecate Model.print and Model.each_page (jeremyevans)

* Deprecate Dataset checking that the Database implements the identifier mangling methods (jeremyevans)

* Deprecate Database#reset_schema_utility_dataset private method (jeremyevans)

* Speed up Database#fetch, #from, #select, and #get by using a cached dataset (jeremyevans)

* Make sure adapters with subadapters have fully initialized database instances before calling Database.after_initialize (jeremyevans)

* Set identifier mangling methods on Database initialization (jeremyevans)

* Switch internal use of class variables to instance variables (jeremyevans)

* Deprecate passing an options hash to Database#dataset or Dataset.new (jeremyevans)

* Speed up Dataset#clone (jeremyevans)

* Add sequel_3_dataset_methods extension for Dataset#[]=, #insert_multiple, #to_csv, #db=, and #opts= (jeremyevans)

* Deprecate Dataset#[]=, #insert_multiple, #to_csv, #db=, and #opts= (jeremyevans)

* Add blacklist_security plugin for Model.restricted_columns, Model.set_restricted_columns, Model#set_except, and Model#update_except (jeremyevans)

* Deprecate Model.restricted_columns, Model.set_restricted_columns, Model#set_except, and Model#update_except (jeremyevans)

* Deprecate Database#default_schema (jeremyevans)

* Deprecate Sequel::NotImplemented and defining methods that raise it (jeremyevans)
